--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-es2015": "^6.13.2",
     "concurrently": "^2.2.0",
     "cpx": "^1.3.2",
+    "debounce": "^1.0.0",
     "exports-loader": "^0.6.3",
     "express": "^4.14.0",
     "imports-loader": "^0.6.5",
